deploy/frontend/middleware-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: frontend-rewrite
  namespace: frontend-service
spec:
  replacePathRegex:
    regex: ^/.*
    replacement: /
